# mcp-orchestration-framework

./: .gitignore  README.md  feedback.md  feedback_old_20251025_233826.md  pyproject.toml  requirements-docs.txt  requirements.txt  tech_fit.yaml
.agent/: AGENTS.md  CONTEXT.yaml
.agents/backlog/: conflicts.yaml
.agents/evidence/: IMPL-20251025-142135.json  IMPL-20251025-142148.json  IMPL-20251025-142148_report.md  implementation_evidence.md
.agents/lessons/: 20251025_contextual_awareness_in_collaboration.md  aa_sot_behavior_coordination.md  critical_violation_fake_evidence.md  poc_information_management.md  thorough-investigation-behavior.md  trust_accountability_framework.md
.agents/logs/: 2025-10-24T160500Z.jsonl
.agents/tools/: evidence_collector.py  multi_aa_demo.py  smoke_test_implementation.py  trust_verification.py  user_control_system.py
brainstorm/templates/: session_readme_template.md
configs/: providers.example.yaml
context/: README.md  handoff-template.md
context/sessions/: .gitkeep  2025-10-25-19-30-example-handoff.md
docs/: index.md
docs/briefs/: brainstorm_lessons.md  brainstorm_playbook.md  consensus_protocol.md  contribution_policy.md  project_charter.md  sanitize_checklist.md  ssot_governance.md  value_story.md
docs/decisions/: ADR-001-aa-behavior-standards.md
docs/design/: api_integration.md  (+1 more)
samples/: api_workflow.md  session_walkthrough.md
tests/: PLAN.md  test_config.json  test_evidence_collector.py  test_registry.py  test_smoke.py
tools/: bootstrap_orchestrator.sh  brainstorm_scaffold.py  sanitize_manifest.py
(+78 files in other folders)
